[tool.poetry]
name = "causality-etl"
version = "0.1.0"
description = ""
authors = ["Daniel Lawson <52593003+danlsn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.8"
meltano = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
